# Max-s-Guitar-Pedal-WebApp

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  README.md  buildpedal.sh  supabase_setup.sql
.github/workflows/: build.yml
guitar-pedal-webapp/: package-lock.json  package.json  supabase_setup.sql
guitar-pedal-webapp/public/: audio-worklet.js
guitar-pedal-webapp/src/app/: page.tsx
guitar-pedal-webapp/src/components/: AboutScreen.tsx  ConfirmDialog.tsx  HomeScreen.tsx  Knob.tsx  LoginScreen.tsx  Notification.tsx  PedalBoard.tsx  PedalComponent.tsx  SavedBoardsScreen.tsx  SignupScreen.tsx
guitar-pedal-webapp/src/lib/: audio-engine.ts  auth-context.tsx  supabase.ts
src/: ScreenRouter.cpp  ScreenRouter.h  main.cpp
src/auth/: AuthManager.cpp  AuthManager.h  SupabaseClient.cpp  SupabaseClient.h
src/pedalGUI/: BluesDriverComponent.h  ChorusComponent.cpp  ChorusComponent.h  CompressorComponent.h  CustomLookAndFeel.h  CustomToggleButton.h  DistortionComponent.h  OctaveComponent.h  OverdriveComponent.cpp  OverdriveComponent.h  PedalComponent.cpp  PedalComponent.h  ReverbComponent.h  TremoloComponent.h
src/pedalSoundEffects/: BaseEffects.h  BluesDriver.h  Chorus.h  Compressor.h  CustomReverb.cpp  CustomReverb.h  Distortion.h  Octave.h  Overdrive.cpp  Overdrive.h  Tremolo.h
src/screens/: AboutScreen.h  CreateAccountScreen.h  HomeScreen.h  LoginScreen.h  PedalBoardScreen.cpp  PedalBoardScreen.h  SavedBoardsScreen.cpp  SavedBoardsScreen.h
